fixScrollBar

--- a/css/header.css
+++ b/css/header.css
@@ -187,3 +187,14 @@
     color: var(--text-3);
     margin-left: 2px;
 }
+
+.scroll-progress {
+    position: fixed;
+    top: 54px;
+    left: 0;
+    height: 2px;
+    background: var(--blue);
+    width: 0%;
+    z-index: 300;
+    transition: width 0.08s linear;
+}
